--- a/styles/sass/_baserules.scss
+++ b/styles/sass/_baserules.scss
@@ -45,11 +45,9 @@ body, html {
 	width: 100%;
 	overflow-x: hidden;
     font-family: $neogrey-regular;
-	background-color: $background-color;
-
-
-
+		background-color: $background-color;
 }
+
 ol, ul {
 	list-style: none;
 }
@@ -72,7 +70,11 @@ a	{
 }
 a:hover{
 	text-decoration: none;
-	color:$primary-color;
+	color:black;
+
+}
+li:hover{
+		background: $dropdown-color;
 }
 
 #page-loader {
@@ -102,8 +104,6 @@ h3{
 p{
 	font-family: sans-serif;
 	line-height: 26px;
-	margin-bottom: 40px;
-	margin-top: 20px;
 }
 
 /*---COLORS----*/
