--- a/styles/sass/_layout.scss
+++ b/styles/sass/_layout.scss
@@ -81,7 +81,7 @@ outline: none;
 		height:100%;
 
         cursor:pointer;
-		.caca{
+		.granpez-logo-reel{
 			position: absolute;
 			top: 30%;
 			right:27%;
