--- a/styles/sass/_elements.scss
+++ b/styles/sass/_elements.scss
@@ -2,109 +2,107 @@
 		1.-ELEMENTS
 --------------------------------*/
 
-/*---------BTN---------*/
+/*---------BTN- IF WE NEED IT---------*/
 
-
-.btn {
-  background-color: $primary-color;
-  color: white;
-    font-size: 14px;
-  padding: 10px 26px;
-  border-radius: 3px;
-  border:2px solid $primary-color;
-  &:hover{
-    transition: all 0.3s;
-    opacity: 0.8;
-  }
-}
-
-.btn-blue{
-  @extend .btn;
-  background-color: $primary-color;
-  border:2px solid $primary-color;
-}
-
-.btn-grey{
-  @extend .btn;
-  background-color: $secondary-color;
-  border:2px solid $secondary-color;
-}
-
-.btn-danger{
-  @extend .btn;
-  background-color: $danger-color;
-
-  border:2px solid $danger-color;
-}
-
-.btn-border{
-  @extend .btn;
-  .fa{
-    margin-right: 10px;
-  }
-  background-color: $white;
-  color: $primary-color;
-
-  font-size: 15px;
-  padding: 10px 20px;
-  border:2px solid $primary-color;
-}
-
-
-.btn-back{
-  i{
-    color: $primary-color;
-    vertical-align: middle;
-    border: 3px solid $primary-color;
-    border-radius: 100%;
-    padding:7px;
-    &:hover{
-    transition: all 0.3s;
-    opacity: 0.8;
-    }
-  }
-}
-.btn-foward{
-     @extend .btn-back;
- i{
-
-    transform: rotate(180deg);
-
-    }
-  }
-.btn-down{
-    @extend .btn-back;
-    i{
-        transform: rotate(270deg);
-    }
-  }
-.btn-down-home{
-    @extend .btn-back;
-    cursor:pointer;
-    i{
-        border: 1px solid transparent;
-        color:$light-grey;
-        box-shadow: 0px 4px 9px -5px $light-grey;
-    }
-}
-
-.btn-up-home{
-    @extend .btn-down-home;
-}
-
-.btn-trash{
-    @extend .btn-back;
-    i{
-     color: #4286F5;
-    vertical-align: middle;
-    border: 3px solid #4286F5;
-    border-radius: 100%;
-    padding: 7px;
-    font-size: 24px;
-    }
-
-
-}
+//
+// .btn {
+//   background-color: $primary-color;
+//   color: white;
+//     font-size: 14px;
+//   padding: 10px 26px;
+//   border-radius: 3px;
+//   border:2px solid $primary-color;
+//   &:hover{
+//     transition: all 0.3s;
+//     opacity: 0.8;
+//   }
+// }
+//
+// .btn-blue{
+//   @extend .btn;
+//   background-color: $primary-color;
+//   border:2px solid $primary-color;
+// }
+//
+// .btn-grey{
+//   @extend .btn;
+//   background-color: $secondary-color;
+//   border:2px solid $secondary-color;
+// }
+//
+// .btn-danger{
+//   @extend .btn;
+//   background-color: $danger-color;
+//
+//   border:2px solid $danger-color;
+// }
+//
+// .btn-border{
+//   @extend .btn;
+//   .fa{
+//     margin-right: 10px;
+//   }
+//   background-color: $white;
+//   color: $primary-color;
+//
+//   font-size: 15px;
+//   padding: 10px 20px;
+//   border:2px solid $primary-color;
+// }
+//
+//
+// .btn-back{
+//   i{
+//     color: $primary-color;
+//     vertical-align: middle;
+//     border: 3px solid $primary-color;
+//     border-radius: 100%;
+//     padding:7px;
+//     &:hover{
+//     transition: all 0.3s;
+//     opacity: 0.8;
+//     }
+//   }
+// }
+// .btn-foward{
+//      @extend .btn-back;
+//  i{
+//
+//     transform: rotate(180deg);
+//
+//     }
+//   }
+// .btn-down{
+//     @extend .btn-back;
+//     i{
+//         transform: rotate(270deg);
+//     }
+//   }
+// .btn-down-home{
+//     @extend .btn-back;
+//     cursor:pointer;
+//     i{
+//         border: 1px solid transparent;
+//         color:$light-grey;
+//         box-shadow: 0px 4px 9px -5px $light-grey;
+//     }
+// }
+//
+// .btn-up-home{
+//     @extend .btn-down-home;
+// }
+//
+// .btn-trash{
+//     @extend .btn-back;
+//     i{
+//      color: #4286F5;
+//     vertical-align: middle;
+//     border: 3px solid #4286F5;
+//     border-radius: 100%;
+//     padding: 7px;
+//     font-size: 24px;
+//     }
+// }
 
 
 
